Fixed basket overflow on small screens + new attempt at button fix

--- a/layout/src/styles/components/_buttons.scss
+++ b/layout/src/styles/components/_buttons.scss
@@ -1,6 +1,6 @@
 .btn {
-  padding: 0.3em 0.9em;
-  margin: 0.2em 0;
+  padding: 0.3rem 0.9rem;
+  margin: 0.2rem 0;
   border-radius: 5px;
   border: 2px solid;
   cursor: pointer;
@@ -11,6 +11,8 @@
     text-decoration: none;
     color: inherit;
     font-size: 1rem;
+    padding: 0;
+    margin: 0;
   }
 
   &-primary {
