--- a/layout/src/styles/layout/_basket.scss
+++ b/layout/src/styles/layout/_basket.scss
@@ -31,6 +31,7 @@
     "img . qty"
     "img . price";
   align-items: center;
+  box-sizing: border-box;
   margin: 1rem 0;
   padding: 1rem 2rem;
   border-radius: 20px;
@@ -133,7 +134,30 @@
       height: 70vw;
       max-height: 25rem;
       max-width: 25rem;
-      margin-right: 1rem;
+      margin: 0 auto;
+      grid-area: img;
+      background: white;
+      border-radius: 20px;
+    }
+  }
+}
+
+@media only screen and (max-width: #{$mq-xs}) {
+  .basketcard {
+    width: 100%;
+    font-size: minmax(70%, 100%);
+
+    &-btn {
+      justify-self: center;
+    }
+    &-img {
+      min-width: 50px;
+      min-height: 50px;
+      height: 100%;
+      width: 100%;
+      max-height: 50vw;
+      max-width: 50vw;
+      margin: 0 auto;
       grid-area: img;
       background: white;
       border-radius: 20px;
